--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <title>Refresh and Play</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body onload="roll()">
     <header>
-        <img src="" alt="">
+        <img src="" alt="loading">
         <h1>Player wins</h1>
-        <img src="" alt="">
+        <img src="" alt="loading">
     </header>
     <main>
         <div>
             <h2>Player 1</h2>
-            <img src="" alt="">
+            <img src="/refresh-and-roll/index.html" alt="loading" id="player1_img">
         </div>
         <div>
             <h2>Player 2</h2>
-            <img src="" alt="">
+            <img src="" alt="loading">
         </div>
     </main>
 
